--- a/css/style.css
+++ b/css/style.css
@@ -106,8 +106,10 @@ Works
 }
 #works li img{
   object-fit: cover;
-  max-height: 100%;
-  width:300px
+/*   max-height: 100%; */
+  width:100%;
+  height:100%;
+  object-position:top;
 }
 
 /* 
