--- a/css/style.css
+++ b/css/style.css
@@ -154,6 +154,9 @@ News
 #contact dt:last-child{
   margin-bottom: 0;
 } */
+#contact #name, #contact #email{
+  line-height:2;
+}
 #contact dd input, #contact textarea{
   width: 100%;
   /* padding: 10px; */
